--- a/css/styles.css
+++ b/css/styles.css
@@ -236,13 +236,11 @@ body {
 }
 .ourteam-card {
     flex-basis: calc((100% - 72px) / 4);
-    
-    background-color: var(--white);
-    box-shadow: 
-    0px 1px 6px rgba(46, 47, 66, 0.08), 
-    0px 1px 1px rgba(46, 47, 66, 0.16), 
-    0px 2px 1px rgba(46, 47, 66, 0.08);
+
     border-radius: 0px 0px 4px 4px;
+    background-color: var(--white);
+    
+    
 }
 
 
@@ -262,6 +260,7 @@ body {
     padding-right: 16px;
     padding-bottom: 32px;
     padding-left: 16px;
+    
     
     
 }
@@ -329,9 +328,8 @@ body {
     background-color:var(--logo-footer);
     color: var(--logo-web);
     border: none;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-    border-radius: 4px;
+    
 
 }
 .filter-button:hover,
@@ -345,7 +343,8 @@ body {
 .ourproduct-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 48px;
+    column-gap: 24px;
 }
 .ourproduct-item {
     flex-basis: calc((100% - 48px) / 3);
@@ -355,6 +354,7 @@ body {
     padding-bottom: 32px;
 
     border: 1px solid #E7E9FC;
+    border-top: none;
 
 }
 
