--- a/css/styles.css
+++ b/css/styles.css
@@ -352,6 +352,7 @@ body {
 .card-bottom {
     padding-top: 32px;
     padding-bottom: 32px;
+    padding-left: 16px;
 
     border: 1px solid #E7E9FC;
     border-top: none;
